09/07/2004 0.0.12 fix release
- added link tag support to aggregator plugin
08/07/2004 0.0.11 feature/fix release (never released officially)
- added base tutorials to manual
- added pubDate tag support to aggregator plugin
- added gmail.lua to manual + various fixes
- added man page to manual
- added FAQ to manual
- fixed man page
- fixed old bug in popstate.c in wrong index check in array acess
- fixed bug introduced in fixing the fix for popserver rfc compliace
- added kerneltrap.org and linux.kerneltrap.org aggregator domains
- fixed aggregator.lua and flatnuke.lua 
- added reject/accept policy section in config.lua
- added # chkconfig to rpm rc file (thanks domfe)
- fixed bug introduced in fixing popserver rfc compliace
- added plugin tutorial to the manual
- fixed bug in aggregator.lua
- fixed bug in mimer (thanks nickshw for bugreporting)
- regularexp lua bindings added
- workaround for the tin TOP. (not fixed, probable bug in stringhack.tophack)
- fixed popserver rfc compliace issue (stat/list/uidl doesn't show messages
marked for deletion) thanks ramik for bugreporting
- fixed bug in browser.lua
- fixed tin.lua issue
28/06/2004 0.0.10 fix release
- added freepops.need_sll() that asserts SSL is present 
(call it after loading browser in the init function of the plugin)
- added browser.ssl_enabled() to check is SSL is available
- fixed bug in engine.c (thanks to ramik)
- added fflush to luay.c (thanks to ramik)
- fixed bug in lycos (thanks to Francesco)
27/06/2004 0.0.9 fix release
- now win32 dist can include SSL enabled curl
- added browser:get_cookie(name) 
- added sanity checks functions to plugins
- common.lua now implements the commonly used uidl* list* dele rset noop
- fixed tin.lua for messages bigger than 1MB
- fixed proxy Host: problem
- added header to each source file
- fixed file descriptor leak in log.c (log_rotate)
22/06/2004 0.0.8 fix release
- now lycos deletes messages from the trash
- doc to kernel.lua
- fixed some lycos issues