@@ -1,11 +1,8 @@
 legeng: more + means more done! (from 1 to 7)
 
-next release 0.0.12
+next release 0.0.13
 	plugin (superva,freepass,hotmail,yahoo,excite,gmail)
 	problemi in lycos(magari sistemare il mimer decentemente)
 	problemi login tin(aspetta ethereal)
 	sostituire le faq sul sito con quelle nei manuali (gia' aggiornate)
-	aggiungere tutorial di liberopops su web e se necessario replicarli sul manuale
-	aggionra plugin ramik
 	fai generare i ps in /doc al volo dai jpg
-	metti tutorial per winspam e lan in manual
